<resources>
    <string name="app_name">KotlinFirstApp</string>
    <string name="main_activity_title">MainActivity</string>
    <string name="register_user_activity_title">RegisterUserActivity</string>
    <string name="coinDatabase">coinDatabase</string>
    <string name="no_account">No account?</string>
    <string name="no_account_register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="password_not_correct">Password not correct</string>
    <string name="user_doesnt_exist">User does not exist</string>
    <string name="username_error">Username cant be less then 3 characters</string>
    <string name="password_error">Password cant be less then 7 characters</string>
    <string name="user_duplicate_toast">There already exists a users with that username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="coin_name">Coin name: %s</string>
    <string name="coin_acronym">Coin acronym: %s</string>
    <string name="search">Search</string>
    <string name="coin">Coin :</string>
    <string name="details">Details</string>
    <string name="loading">Loading</string>
    <string name="save_coin">Save coin</string>
    <string name="coin_price">Coin price: %s %s </string>
    <string name="coin_key">coin</string>
    <string name="search_coins_tag">search_coins_fragment</string>
    <string name="retrofit_error">Retrofit error, please try again</string>
    <string name="singleCoin">Coin name</string>
    <string name="coins">coin</string>
    <string name="coin_search">CoinSearch</string>
</resources>
