<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchCoins.SearchCoinsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="@dimen/usual_padding"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCoinName"
            android:layout_width="@dimen/wide_text_input"
            android:layout_height="match_parent"
            android:hint="@string/singleCoin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_margin"
        android:text="@string/search"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <ProgressBar
        android:id="@+id/searchProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintVertical_bias="0.115" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        android:orientation="horizontal"
        android:padding="@dimen/usual_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvCoinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/usual_padding" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/details"
            android:textAllCaps="false"
            android:visibility="invisible" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>