<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginUser.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:text="@string/login"
        android:textSize="@dimen/bigger_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.074">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:padding="@dimen/eight_margin" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.043">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/eight_margin" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:clickable="false"
        android:text="@string/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:text="@string/register"
        android:textColor="@color/darkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/tvNoAccount"
        app:layout_constraintTop_toTopOf="@+id/tvNoAccount" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_margin"
        android:layout_marginLeft="@dimen/eight_margin"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginEnd="@dimen/eight_margin"
        android:layout_marginRight="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.142" />

    <ProgressBar
        android:id="@+id/logInprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoAccount"
        app:layout_constraintVertical_bias="0.36" />


</androidx.constraintlayout.widget.ConstraintLayout>